<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="374dp"
            android:layout_height="179dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="33dp"
                android:layout_marginBottom="3dp"
                android:text="@string/i_love_android"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/switch1"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.403"
                tools:text="I love Android"
                tools:textColor="@color/black"
                tools:textSize="30sp"
                tools:visibility="visible" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch2"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="107dp"
                android:layout_marginBottom="216dp"
                android:text="@string/switch_on_off"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="58dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="159dp"
                android:onClick="onClick"
                android:text="@string/press_me"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch1" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="141dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="13dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox">


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/i_love_androids"
                android:textColorHint="#616161"
                tools:ignore="TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="521dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="258dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="464dp"
                android:layout_height="214dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="181dp"
                android:contentDescription="@string/america"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/americanflagsmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="508dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="146dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="54dp"
                android:layout_marginBottom="96dp"
                android:minHeight="48dp"
                android:text="@string/check_this_out"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>